	the database from initializing.
2025-04-18 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in gnmc(1) that threw a SQL error when attempting to
	create a new event.
2025-04-18 Fred Gleason <fredg@paravelsystems.com>
	* Fixed bugs in gnmd(8) that threw 'no such signal' errors.
2025-04-18 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in gnmc(1) that caused garbage to appear in
	feed entries in the 'List Feeds' dialog.
2025-04-18 Fred Gleason <fredg@paravelsystems.com>
	* Fixed 'no such signal' errors in 'src/common/streamcmdserver.cpp'.
2025-04-18 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in gnmc(1) that caused the 'Service Health' indicator
	to display inaccurate state when the local timezone was set to
	non-UTC values.
2025-04-21 Fred Gleason <fredg@paravelsystems.com>
	* Added support for updating gncd(1) via apt(8).
2025-04-21 Fred Gleason <fredg@paravelsystems.com>
	* Modified gnmc(1) to allow multiple receivers to be selected for
	firmware upgrade.
2025-04-21 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.8.1.
2025-04-23 Fred Gleason <fredg@paravelsystems.com>
	* Fixed bugs in gncd(8) that caused remote upgrade requests to fail
	while causing corrupt DEB package installation.
2025-04-23 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.8.2.
2025-04-23 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in gncd(8) that failed to completely clean up after
	processing an online update operation.
2025-04-23 Fred Gleason <fredg@paravelsystems.com>
	* Modified the 'List Receivers' dialog in gnmc(1) to permit multiple
	receivers to be selected for firmware update simultaneously.
2025-04-23 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.8.3.
2025-04-25 Fred Gleason <fredg@paravelsystems.com>
	* Changed the parameter of the 'Chassis' column in the 'List
	Receivers' dialog' in gnmc(1) from the the chassis ID to the
	chassis serial number.